<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".NotesActivity">

    <EditText
        android:layout_marginTop="55dp"
        android:minHeight="48dp"
        android:inputType="text"
        android:autofillHints="Title"
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_title" />

    <EditText
        android:autofillHints="Note"
        android:id="@+id/contentEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_content"
        android:layout_margin="16dp"
        android:inputType="textMultiLine"
        android:minLines="5" />

    <Button
        android:id="@+id/addNewNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_note"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_note"
        android:layout_marginTop="16dp" />

</LinearLayout>